k8s/operational-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operational-node
  namespace: investpilot
spec:
  # 2 replicas so rolling updates don't cause downtime
  replicas: 2
  selector:
    matchLabels:
      app: operational-node
  template:
    metadata:
      labels:
        app: operational-node
    spec:
      # should not run on k3s-master
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - k3s-master
      containers:
        - name: operational-node
          image: ghcr.io/andreiopran/investpilot-operational-node:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: operational-service
  namespace: investpilot
spec:
  selector:
    app: operational-node
  ports:
    - port: 8081
      targetPort: 8081
